# decentralized-p2p-chat-application

./: Cargo.toml  README.md
src/: main.rs
