[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
data-encoding = "2"
iroh = "0.91"
iroh-gossip = "0.91"
iroh-base = "0.91"
n0-future = "0.1"
n0-watcher = "0.1"
futures-lite = "2.6.1"
